# PlatipusLog

./: LICENSE  README.md  docker-compose.yml  main.py  platipus.config.yaml  platipuslogs.db  pyproject.toml
app/: cli.py
app/core/: file_manager.py  logger.py
app/models/: logger.py
