[project]
name = "platipuslogs"
version = "0.1.0"
description = "A Framework for simple log visualization"
authors = [
    {name = "Gabriel Meula"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy >=2.0.40,<3.0.0",
    "pyyaml (>=6.0.2,<7.0.0)"
]

[project.scripts]
platipus = "app.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "app", from = "." }
]

